mostly cosmetic changes tbh

--- a/examples/Untitled.ipynb
+++ b/examples/Untitled.ipynb
@@ -137,68 +137,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neet.information import Architecture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 2\n",
-    "timesteps = 5\n",
-    "arch = Architecture(s_pombe, k, timesteps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.06634219, 0.32303261, 0.32303261, 0.07918928,\n",
-       "       0.11236749, 0.24586519, 0.24586519, 0.02025117])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arch.active_information()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.009288397587760105"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node1index,node2index = 3,5\n",
-    "arch.mutual_information()[node1index,node2index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -206,7 +144,7 @@
        "0.9513888888888888"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,119 +155,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s / upper_bound = normalized average c-sensitivity:  0.013195650077160505\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.9500868055555564"
+       "0.9513888888888885"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_pombe.Average_c_sensitivity(c=1)\n",
+    "s_pombe.average_c_sensitivity(c=1)\n",
     "#Should be the same as the above average_sensitivity() function at c=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s / upper_bound = normalized average c-sensitivity:  0.006506972001763679\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1.639756944444447"
+       "1.6423611111111136"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_pombe.Average_c_sensitivity(c=2)"
+    "s_pombe.average_c_sensitivity(c=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s / upper_bound = normalized average c-sensitivity:  0.004254825483434113\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2.680540054563491"
+       "2.6850198412698436"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_pombe.Average_c_sensitivity(c=4)"
+    "s_pombe.average_c_sensitivity(c=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s / upper_bound = normalized average c-sensitivity:  0.0\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s_pombe.Average_c_sensitivity(c=0)\n",
+    "s_pombe.average_c_sensitivity(c=0)\n",
     "#Should equal zero for c=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
