Incomplete list of tests for dynamic randomizers
Will update the rest when computer is together later tonight

--- a/examples/Tests.ipynb
+++ b/examples/Tests.ipynb
@@ -104,20 +104,45 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'float'>\n",
-      "[((1, 2, 3), {'001', '100'}), ((1, 2, 3), {'101', '011'}), ((1, 2, 3), {'111'}), ((1, 2, 3), {'111', '010', '000'})]\n",
-      "[((1, 2, 3), {'010', '000'}), ((1, 2, 3), {'111', '000'}), ((1, 2, 3), {'110', '010'}), ((1, 2, 3), {'011', '110'})]\n"
+      "[((1, 2, 3), {'100', '001'}), ((1, 2, 3), {'011', '101'}), ((1, 2, 3), {'111'}), ((1, 2, 3), {'000', '010', '111'})]\n",
+      "bias_1:  8.0\n",
+      "row_count_1:  4.0\n",
+      "mean_1:  2.0\n",
+      "[((1, 2, 3), {'110', '010'}), ((1, 2, 3), {'000', '110'}), ((1, 2, 3), {'001', '111'}), ((1, 2, 3), {'011', '101'})]\n",
+      "bias_2:  8.0\n",
+      "row_count_2:  4.0\n",
+      "mean_2:  2.0\n"
      ]
     }
    ],
    "source": [
     "tn.test_correct_mean(tn.net4, printq=False, debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn.test_correct_errors_thrown()"
    ]
   }
  ],
