forgot to upload these unit tests

--- a/examples/Tests.ipynb
+++ b/examples/Tests.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -113,11 +113,11 @@
      "output_type": "stream",
      "text": [
       "<class 'float'>\n",
-      "[((1, 2, 3), {'100', '001'}), ((1, 2, 3), {'011', '101'}), ((1, 2, 3), {'111'}), ((1, 2, 3), {'000', '010', '111'})]\n",
+      "[((1, 2, 3), {'001', '100'}), ((1, 2, 3), {'011', '101'}), ((1, 2, 3), {'111'}), ((1, 2, 3), {'000', '010', '111'})]\n",
       "bias_1:  8.0\n",
       "row_count_1:  4.0\n",
       "mean_1:  2.0\n",
-      "[((1, 2, 3), {'110', '010'}), ((1, 2, 3), {'000', '110'}), ((1, 2, 3), {'001', '111'}), ((1, 2, 3), {'011', '101'})]\n",
+      "[((1, 2, 3), {'100', '000'}), ((1, 2, 3), {'011', '001'}), ((1, 2, 3), {'100', '010'}), ((1, 2, 3), {'110', '101'})]\n",
       "bias_2:  8.0\n",
       "row_count_2:  4.0\n",
       "mean_2:  2.0\n"
@@ -131,6 +131,23 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn.test_correct_local()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
